fix: Discover job fixes SRF, reoved hardcoded password etc.,